--- a/pages/ux.html
+++ b/pages/ux.html
@@ -50,7 +50,7 @@
                             <p>A user-centered web and mobile platform designed to seamlessly connect students with qualified tutors and provide intuitive tools for managing their learning journey.</p>
                         </li>
                     </a>
-                    <a href="#" class="ux-list-item-link">
+                    <a href="../pages/quickeats.html" class="ux-list-item-link">
                         <li class="ux-list-item">
                             <img src="../assets/quickeats.png">
                             <h3>QuickEats</h3>
