echo final and refined webpages

--- a/index.html
+++ b/index.html
@@ -71,6 +71,17 @@
                             <h3>QuickEats</h3>
                             <p>A mobile food ordering app that offers a seamless and delightful user experience, addressing key user concerns such as delivery speed, affordability, app usability, and transparency.</p>
                         </li>
+                    </a>
+
+                    <a href="pages/echo.html" class="ux-list-item-link">
+                        <li class="ux-list-item">
+                            <img src="assets/echo mockups.png">
+                            <h3>Echo</h3>
+                            <p>A community-focused platform that connects casual enthusiasts through curated content, aura-based matching, and local event discovery—fostering real-world connections between artists and audiences beyond traditional social media</p>
+                        </li>
+                    </a>
+
+                    
                 </ul>
             </div>
             <div class="buttons">
