--- a/pages/myWork.html
+++ b/pages/myWork.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>My Work</title>
+        <title>About Me</title>
         <link rel="stylesheet" href="../style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,39 +24,66 @@
 
             <nav class="navbar" id="navbar">
                 <a href="../#home">Home</a>
-                <a href="about.html">About</a>
+                <a href="../#about">About</a>
                 <a href="#myWork">My Work</a>
                 <a href="../#contact">Contact</a>
             </nav>
         </header>
-     
 
-         <!-- My Work -->
-         <section class="work-section" id="myWork">
-            <div class="work-heading">
-                <h1>My Work</h1>
-                <p>Explore a selection of my projects across various creative and technical disciplines.</p>
+        <!-- UX -->
+         <section class="ux">
+            <div class="ux-text">
+                <h1>UX/UI Design Projects</h1>
+
+                <ul class="ux-list">
+                    <a href="../pages/thera.html" class="ux-list-item-link">
+                        <li class="ux-list-item">
+                            <img src="../assets/theralink.png">
+                            <h3>TheraLink</h3>
+                            <p>A teletherapy platform that simplifies mental health support by connecting users with licensed therapists and providing integrated wellness tools.</p>
+                        </li>
+                    </a>
+                    <a href="#" class="ux-list-item-link">
+                        <li class="ux-list-item">
+                            <img src="../assets/tutorme.png">
+                            <h3>TutorMe</h3>
+                            <p>A user-centered web and mobile platform designed to seamlessly connect students with qualified tutors and provide intuitive tools for managing their learning journey.</p>
+                        </li>
+                    </a>
+                    <a href="../pages/quickeats.html" class="ux-list-item-link">
+                        <li class="ux-list-item">
+                            <img src="../assets/quickeats.png">
+                            <h3>QuickEats</h3>
+                            <p>A mobile food ordering app that offers a seamless and delightful user experience, addressing key user concerns such as delivery speed, affordability, app usability, and transparency.</p>
+                        </li>
+                    <a href="../pages/echo.html" class="ux-list-item-link">
+                        <li class="ux-list-item">
+                            <img src="../assets/echo mockups.png">
+                            <h3>Echo</h3>
+                            <p>A community-focused platform that connects casual enthusiasts through curated content, aura-based matching, and local event discovery—fostering real-world connections between artists and audiences beyond traditional social media</p>
+                        </li>
+                    </a>
+                </ul>
+
+                <h2>Web Design and UI Platform Features Projects</h2>
+                <ul class="ux-list">
+                    <a href="#" class="ux-list-item-link">
+                        <li class="ux-list-item">
+                            <img src="#">
+                            <h3>Moro App Redesign</h3>
+                        </li>
+                    </a>
+                    <a href="#" class="ux-list-item-link">
+                        <li class="ux-list-item">
+                            <img src="#">
+                            <h3>Agentflow AI tooltips design</h3>
+                        </li>
+                    </a>
+                </ul>
             </div>
-
-            <section class="work-container">
-                <a href="ux.html" class="work-item">
-                    <img src="../assets/figma.png" alt="Figma Icon" class="work-icon">
-                    <div class="work-text">
-                        <h2>1. UX/UI Design</h2>
-                        <p>Crafting intuitive and engaging user experiences for digital products.</p>
-                    </div>
-                </a>
-                <a href="frontend.html" class="work-item">
-                    <img src="https://placehold.co/60x60/4A0E4E/DCD0FF?text=DEV" alt="Frontend Icon" class="work-icon">
-                    <div class="work-text">
-                        <h2>2. Frontend Web Development</h2>
-                        <p>Building responsive and dynamic web interfaces with modern technologies.</p>
-                    </div>
-                </a>
-            </section>
-
          </section>
 
+        <!-- Footer -->
          <footer class="footer">
             <p>&copy; 2025 Tiwi Lanre-Adisa. All rights reserved.</p>
             <p>Designed by Tiwi Lanre-Adisa</p>
