new moro project page and key styling refinement

--- a/pages/about.html
+++ b/pages/about.html
@@ -40,11 +40,40 @@
                 <h2>About <span class="me-highlight">Me</span></h2>
 
                 <p>
-                    I’m a 4th-year Computer Science student at Wilfrid Laurier University, focusing on <span class="text-highlight">Web Development and UX/UI design</span>. Passionate about creating 
-                    intuitive websites and user-friendly interfaces, I combine my technical skills with a strong eye 
-                    for design. I’m eager to expand my expertise in front-end development and UX/UI 
-                    design while gaining real-world experience in collaborative projects.
+                    I’m a 4th-year CS student at WLU with a deep love for UX/UI. I combine 
+                    <span class="text-highlight">technical grit with a designer’s intuition</span> 
+                    to build web experiences that actually make sense. I’m eager to bring my hybrid 
+                    skill set to a collaborative team and turn complex problems into 
+                    <span class="text-highlight">'simply divine'</span> solutions.
                 </p>
+
+                <div class="about-interests">
+                    <h3>Off the<span class="me-highlight">Clock</span></h3>
+                    <p class="ux-byline">When I’m not fixing figma frames or debugging code, you can find me...</p>
+                    
+                    <div class="interests-grid">
+                        <div class="interest-item">
+                            <span class="interest-icon">💃</span>
+                            <p>Dancing & Singing</p>
+                        </div>
+                        <div class="interest-item">
+                            <span class="interest-icon">🎸</span>
+                            <p>Strumming my Guitar</p>
+                        </div>
+                        <div class="interest-item">
+                            <span class="interest-icon">📚</span>
+                            <p>Lost in a Book</p>
+                        </div>
+                        <div class="interest-item">
+                            <span class="interest-icon">📺</span>
+                            <p>Binging K-Dramas</p>
+                        </div>
+                        <div class="interest-item">
+                            <span class="interest-icon">🙏</span>
+                            <p>Reading my Bible</p>  
+                        </div>
+                    </div>
+                </div>
 
             </div>
 
@@ -65,7 +94,7 @@
                     <li>
                         <img src="../assets/tools-icon.png">
                         <h3>Tools</h3>
-                        <p>Figma, SQL Developer, Eclipse, Canva, Github, VSCode</p>
+                        <p>Figma, Framer, Lovable, Canva, Github, VSCode</p>
                     </li>
                 </ul>
             </div>
