--- a/pages/myWork.html
+++ b/pages/myWork.html
@@ -24,7 +24,7 @@
 
             <nav class="navbar" id="navbar">
                 <a href="../#home">Home</a>
-                <a href="../#about">About</a>
+                <a href="../pages/about.html">About</a>
                 <a href="#myWork">My Work</a>
                 <a href="../#contact">Contact</a>
             </nav>
@@ -43,13 +43,6 @@
                             <p>A teletherapy platform that simplifies mental health support by connecting users with licensed therapists and providing integrated wellness tools.</p>
                         </li>
                     </a>
-                    <a href="#" class="ux-list-item-link">
-                        <li class="ux-list-item">
-                            <img src="../assets/tutorme.png">
-                            <h3>TutorMe</h3>
-                            <p>A user-centered web and mobile platform designed to seamlessly connect students with qualified tutors and provide intuitive tools for managing their learning journey.</p>
-                        </li>
-                    </a>
                     <a href="../pages/quickeats.html" class="ux-list-item-link">
                         <li class="ux-list-item">
                             <img src="../assets/quickeats.png">
@@ -63,23 +56,21 @@
                             <p>A community-focused platform that connects casual enthusiasts through curated content, aura-based matching, and local event discovery—fostering real-world connections between artists and audiences beyond traditional social media</p>
                         </li>
                     </a>
-                </ul>
 
-                <h2>Web Design and UI Platform Features Projects</h2>
-                <ul class="ux-list">
-                    <a href="#" class="ux-list-item-link">
+                    <a href="../pages/moroapp.html" class="ux-list-item-link">
                         <li class="ux-list-item">
-                            <img src="#">
+                            <img src="../assets/morofinal.png">
                             <h3>Moro App Redesign</h3>
-                        </li>
-                    </a>
-                    <a href="#" class="ux-list-item-link">
-                        <li class="ux-list-item">
-                            <img src="#">
-                            <h3>Agentflow AI tooltips design</h3>
+                            <p>A strategic UX redesign of the Moro App during my internship, focusing on enhancing user experience while balancing design freedom with technical performance.</p>
                         </li>
                     </a>
                 </ul>
+            </div>
+
+            <div class="coming-soon">
+                <div class="pulse-icon"></div>
+                <p>More exciting projects coming soon...</p>
+                <span class="stay-tuned">Stay Tuned</span>
             </div>
          </section>
 
