--- a/pages/quickeats.html
+++ b/pages/quickeats.html
@@ -23,7 +23,7 @@
 
   <nav class="navbar" id="navbar">
     <a href="../#home">Home</a>
-    <a href="../#about">About</a>
+    <a href="../pages/about.html">About</a>
     <a href="../pages/myWork.html">My Work</a>
     <a href="../#contact">Contact</a>
   </nav>
