--- a/pages/thera.html
+++ b/pages/thera.html
@@ -25,7 +25,7 @@
 
   <nav class="navbar" id="navbar">
     <a href="../#home">Home</a>
-    <a href="../#about">About</a>
+    <a href="../pages/about.html">About</a>
     <a href="../pages/myWork.html">My Work</a>
     <a href="../#contact">Contact</a>
   </nav>
@@ -34,6 +34,7 @@
 <main class="case-study-container">
 
     <section class="case-hero">
+        
         <h1>TheraLink</h1>
         <p class="tagline">A digital platform for teletherapy, offering a one-stop solution for mental health support.</p>
         <div class="full-width-asset">
