about me addition

--- a/pages/about.html
+++ b/pages/about.html
@@ -75,6 +75,10 @@
                     </div>
                 </div>
 
+                <div class="color-fun-fact">
+                    <p><strong>Fun Fact:</strong> If you haven't guessed by now, my favorite color is <span>Purple</span>. I love how it balances creativity with a sense of luxury and depth.</p>
+                </div>
+
             </div>
 
             <div class="about-skills">
